feat: update catalog controller and tests
