# app/controllers/catalog_controller.rb
@@ -1,15 +1,17 @@
 class CatalogController < ApplicationController
-  OWNER_SHOW = [ :id, :name ]
-  CATEGORY_SHOW = [ :id, :title, :description ]
-  PRODUCT_SHOW = [ :id, :title, :description, :price ]
-
   def show
-    @catalog = Owner.includes(categories: :products).find(params.expect(:owner_id))
-    render json: @catalog.to_json(
-      only: OWNER_SHOW, include: {
-        categories: { only: CATEGORY_SHOW, include: {
-          products: { only: PRODUCT_SHOW }
-        } }
-      })
+    @owner = Owner.find(params[:owner_id])
+    @catalog_url = "https://#{get_bucket}.s3.#{get_region}.amazonaws.com/#{@owner.id}-catalog.json"
+    render json: { catalog_url: @catalog_url }
+  end
+
+  private
+
+  def get_bucket
+    ENV.fetch("AWS_BUCKET_NAME") { Rails.application.credentials.dig(:aws, :s3, :bucket_name) }
+  end
+
+  def get_region
+    Aws.config[:region]
   end
 end
